--- a/AplikasiPendaftaranSiswa/src/code/Dashboard.form
+++ b/AplikasiPendaftaranSiswa/src/code/Dashboard.form
@@ -292,20 +292,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jDesktopPane1" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
+          <Component id="jDesktopPane1" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jDesktopPane1" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
+          <Component id="jDesktopPane1" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -316,7 +308,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="182" max="32767" attributes="0"/>
+                  <EmptySpace pref="202" max="32767" attributes="0"/>
                   <Component id="jInternalFrame1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="180" max="-2" attributes="0"/>
               </Group>
@@ -327,7 +319,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
                   <Component id="jInternalFrame1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="131" max="32767" attributes="0"/>
+                  <EmptySpace pref="167" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -482,7 +474,7 @@
                                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace pref="15" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -494,7 +486,7 @@
                           <Font name="Times New Roman" size="24" style="0"/>
                         </Property>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/img/icons8_student_male_50px.png"/>
+                          <Image iconType="3" name="/Img/icons8_student_male_50px.png"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Pendaftaran Siswa"/>
                         <Property name="horizontalTextPosition" type="int" value="0"/>
@@ -510,7 +502,7 @@
                           <Font name="Times New Roman" size="24" style="0"/>
                         </Property>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/img/icons8_business_report_50px.png"/>
+                          <Image iconType="3" name="/Img/icons8_business_report_50px.png"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="SK Bukti Penerimaan"/>
                         <Property name="horizontalTextPosition" type="int" value="0"/>
@@ -526,7 +518,7 @@
                           <Font name="Times New Roman" size="24" style="0"/>
                         </Property>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/img/icons8_identity_theft_35px.png"/>
+                          <Image iconType="3" name="/Img/icons8_identity_theft_35px.png"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Kartu Siswa"/>
                         <Property name="horizontalTextPosition" type="int" value="0"/>
