--- a/AplikasiPendaftaranSiswa/src/report/LaporanDataPembayaran.jrxml
+++ b/AplikasiPendaftaranSiswa/src/report/LaporanDataPembayaran.jrxml
@@ -249,11 +249,18 @@ pembayaran]]>
 				<textFieldExpression><![CDATA[new SimpleDateFormat("EEEE, dd MMMM yyyy", new java.util.Locale("id")).format(new Date())]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="c4245620-cf6a-4053-b19c-78112b39499a" x="615" y="92" width="143" height="20"/>
+				<reportElement uuid="c4245620-cf6a-4053-b19c-78112b39499a" x="614" y="85" width="143" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ibu Badriah, S. Pd. I.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="c4245620-cf6a-4053-b19c-78112b39499a" x="629" y="105" width="89" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="12"/>
+				</textElement>
+				<text><![CDATA[(Kepala Sekolah)]]></text>
 			</staticText>
 		</band>
 	</pageFooter>
