--- a/AplikasiPendaftaranSiswa/src/report/LaporanDataPendaftaran.jrxml
+++ b/AplikasiPendaftaranSiswa/src/report/LaporanDataPendaftaran.jrxml
@@ -268,7 +268,7 @@ pendaftaran]]>
 		<band height="8" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="119" splitType="Stretch">
+		<band height="154" splitType="Stretch">
 			<textField pattern="EEEEE dd MMMMM yyyy">
 				<reportElement uuid="914a09c5-eebd-4d39-8706-0a71aa464a95" style="Column header" x="636" y="0" width="166" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
@@ -289,6 +289,13 @@ pendaftaran]]>
 					<font fontName="Times New Roman" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ibu Badriah, S. Pd. I.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="c4245620-cf6a-4053-b19c-78112b39499a" x="636" y="112" width="89" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="12"/>
+				</textElement>
+				<text><![CDATA[(Kepala Sekolah)]]></text>
 			</staticText>
 		</band>
 	</pageFooter>
