--- a/AplikasiPendaftaranSiswa/src/code/Login.form
+++ b/AplikasiPendaftaranSiswa/src/code/Login.form
@@ -179,7 +179,7 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Img/logo.png"/>
+          <Image iconType="3" name="/img/logo.png"/>
         </Property>
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
